[tool.poetry]
name = "lab-riddler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lab_riddler"}]

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "^0.18.0"
Levenshtein = "^0.25.0"
colorama = "^0.4.5"
inquirerpy = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
